--- a/css/sass.css
+++ b/css/sass.css
@@ -76,6 +76,7 @@ h2 {
 #sobre p {
   line-height: 1.4em;
   padding: 20px 25px;
+  font-size: 1.3em;
 }
 
 .me {
@@ -138,7 +139,7 @@ h2 {
   display: none;
 }
 
-@media (max-width: 353px) {
+@media (max-width: 436px) {
   .conCard #email {
     display: none;
   }
