--- a/css/sass.scss
+++ b/css/sass.scss
@@ -75,6 +75,7 @@ h2{
     p{
         line-height: 1.4em;
         padding: 20px 25px;
+        font-size: 1.3em;
     }
 }
 .me{
@@ -134,7 +135,7 @@ h2{
  #emailMin{
     display:none;
     }
-@media (max-width: 353px){
+@media (max-width: 436px){
     .conCard{
         #email{
             display:none;
